// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List with illustration With icon renders correctly 1`] = `
<jest>
  <div
    class="ecl-list-illustration ecl-list-illustration--zebra"
  >
    <div
      class="ecl-list-illustration__item"
    >
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-list-illustration__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 1
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-list-illustration__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 2
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-list-illustration__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 3
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-list-illustration__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 4
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`List with illustration With image renders correctly 1`] = `
<jest>
  <div
    class="ecl-list-illustration ecl-list-illustration--zebra"
  >
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 1
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 2
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 3
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 4
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`List with illustration With image renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-list-illustration ecl-list-illustration--zebra"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 1
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 2
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 3
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 4
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`List with illustration With image renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-list-illustration ecl-list-illustration--zebra custom-class custom-class--test"
  >
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 1
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 2
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 3
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-list-illustration__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-list-illustration__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-list-illustration__detail"
      >
        <div
          class="ecl-list-illustration__title-container"
        >
          <div
            class="ecl-list-illustration__title"
          >
            List with illustration item 4
          </div>
        </div>
        <div
          class="ecl-list-illustration__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;
